# ELEC3885-SD-Test

./: CMakeLists.txt  Doxyfile.in  Makefile  README.md  STM32F429ZITx_FLASH.ld  software.ioc
Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  syscalls.c
FATFS/App/: fatfs.c
cmake/: arm-none-eabi.cmake  clang.cmake  docs.cmake  gcc.cmake  host.cmake  stmcube.cmake  target.cmake  tests.cmake  toolchain.cmake
include/: stm32f4xx_it.h
lib/: CMakeLists.txt
lib/qtff/: CMakeLists.txt  qtff.c  qtff.h
src/: CMakeLists.txt  interrupts.c  main.c  startup.s  stm32f4xx_hal_conf.h  syscalls.c  system.c  system.h  system_stm32f4xx.c
src/qtff/: qtff.c  qtff.h
tests/: CMakeLists.txt  qtff_test.cpp
